syntax = 'proto3';

package lookout;
option csharp_namespace = "ArmadaProject.Io.Lookout";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "pkg/api/queue.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;

message SystemOverview {
    repeated QueueInfo queues = 1;
}

message JobInfo {
    api.Job job = 1;
    repeated RunInfo runs = 2;
    google.protobuf.Timestamp cancelled = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
    string job_state = 4;
    string job_json = 5;
}

message RunInfo {
    string k8s_id = 1;
    string cluster = 2;
    string node = 3;
    bool succeeded = 4;
    string error = 5;
    google.protobuf.Timestamp created = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
    google.protobuf.Timestamp started = 7 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
    google.protobuf.Timestamp finished = 8 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
    int32 pod_number = 9;
    string run_state = 10;
    bool unable_to_schedule = 11;
}

message QueueInfo {
    string queue = 1;

    uint32 jobs_queued = 2;
    uint32 jobs_pending = 3;
    uint32 jobs_running = 4;

    JobInfo oldest_queued_job = 5;
    JobInfo longest_running_job = 6;

    google.protobuf.Duration oldest_queued_duration = 7;
    google.protobuf.Duration longest_running_duration = 8;
}

message JobSetInfo {
    string queue = 1;
    string job_set = 2;

    uint32 jobs_queued = 3;
    uint32 jobs_pending = 4;
    uint32 jobs_running = 5;
    uint32 jobs_succeeded = 6;
    uint32 jobs_failed = 7;
    uint32 jobs_cancelled = 8;

    DurationStats runningStats = 9;
    DurationStats queuedStats = 10;

    google.protobuf.Timestamp submitted = 11 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message DurationStats {
    google.protobuf.Duration shortest = 1;
    google.protobuf.Duration longest = 2;
    google.protobuf.Duration average = 3;
    google.protobuf.Duration median = 4;
    google.protobuf.Duration q1 = 5;
    google.protobuf.Duration q3 = 6;
}

message GetJobSetsRequest {
    string queue = 1;
    bool newest_first = 2;
    bool active_only = 3;
}

message GetJobSetsResponse {
    repeated JobSetInfo job_set_infos = 1;
}

message GetJobsRequest {
    string queue = 1;
    bool newest_first = 2;
    repeated string job_states = 3;
    repeated string job_set_ids = 4;
    uint32 take = 5;
    uint32 skip = 6;
    string jobId = 7;
    string owner = 8;
    map<string, string> user_annotations = 9;
}

message GetJobsResponse {
    repeated JobInfo job_infos = 1;
}

service Lookout {
    rpc Overview (google.protobuf.Empty) returns (SystemOverview) {
        option (google.api.http) = {
            get: "/api/v1/lookout/overview"
        };
    }

    rpc GetJobSets (GetJobSetsRequest) returns (GetJobSetsResponse) {
        option (google.api.http) = {
            post: "/api/v1/lookout/jobsets"
            body: "*"
        };
    }

    rpc GetJobs (GetJobsRequest) returns (GetJobsResponse) {
        option (google.api.http) = {
            post: "/api/v1/lookout/jobs"
            body: "*"
        };
    }
}
